syntax = "proto3";

package document.v1;

message Document {
  string documentId = 1;
  string subjectId = 2;
  oneof value {
    document.kinds.BraCpf braCpf = 3;
    document.kinds.BraCnh braCnh = 4;
  };
  string createdAt = 5;
  string createdJobId = 6;
  string updatedAt = 7;
  string updatedJobId = 8;
}

message AddDocumentRequest {
  Document document = 1;
}

message AddDocumentResponse {
  string documentId = 1;
  string bucketId = 2;
}

service DocumentService {
  rpc AddDocument (AddDocumentRequest) returns (AddDocumentResponse);
}